# response/calendar.go
@@ -13,3 +13,8 @@ type Timeline struct {
 }
 
 type Calendar model.CalendarView
+
+type CalendarDetail struct {
+	Calendar     model.CalendarView       `json:"calendar"`
+	Calendaritem []model.CalendaritemView `json:"calendaritems"`
+}
